@@ -34,7 +34,8 @@ size_t SQLite3::Result::recordNum() const {
 Records SQLite3::Result::records() const {
     return recs;
 }
-SQLite3::Cursor::Cursor(sqlite3 * d, sqlite3_stmt * s) : db(d), stmt(s) {}
+SQLite3::Cursor::Cursor(sqlite3 * d, sqlite3_stmt * s, const SQLite3& o) 
+    : db(d), stmt(s), owner(o) {}
 Record SQLite3::Cursor::fetchOne() {
     bool busy = false;
     do 
@@ -45,6 +46,7 @@ Record SQLite3::Cursor::fetchOne() {
         {
         case SQLITE_ERROR: case SQLITE_MISUSE: {
                 std::string error = sqlite3_errmsg(db);
+                owner.transaction = false;
                 throw UnknownError("step failed: " +toString(status)  + error);
             }
         case SQLITE_DONE: return Record(); break;
@@ -127,6 +129,7 @@ static int callback(void *r, int argc, char **argv, char **azColName) {
 void SQLite3::throwError(int status) const {
     string error = sqlite3_errmsg(db);
     error = toString(status) + "=status code : " + error;
+    transaction = false;
     switch(status) {
     case SQLITE_ERROR: throw SQLError(error);
     case SQLITE_INTERNAL: throw InternalError(error);
@@ -169,7 +172,7 @@ Backend::Cursor* SQLite3::cursor(string query) const {
             }
         }
         else
-            return new Cursor(db, stmt);
+            return new Cursor(db, stmt, *this);
     }
     
 }
